fixed profile pic overlap

--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -1,7 +1,7 @@
 .profile-pic{
     position: relative;
     z-index:1;
-    height: 20vh;
+    height:263px;
     width: 100%;
     object-fit: cover;
     display:flex;
@@ -15,6 +15,8 @@
    /* right: 300px; */
     /* right: auto; */
     object-fit: contain;
+    /* overflow-clip-margin: content-box; */
+    /* overflow: clip; */
 
 }
 .profile {
