--- a/src/components/ScrollModal/scrollModal.css
+++ b/src/components/ScrollModal/scrollModal.css
@@ -10,3 +10,9 @@
     justify-content: space-evenly;
     gap: 10px
 }
+
+.about-me{
+    display: flex;
+    flex-direction: column;
+}
+
